# word_games

./: .gitignore  .readthedocs.yaml  API.MD  Combiner.html  Combiner.py  LICENSE  README.md  alphabet.csv  combiner.html  combiner_example.py  dictionary.csv  games.py  index.html  pyproject copy.toml  setup.cfg  setup.py  styles.css  test.md  test.py  word_games.py  wordle_example.py  wordle_template.html
deprecated/: test.html  test.md  word_games.py
deprecated/web_template/: Games.py  app.py
deprecated/web_template/games/: Combiner.py  CombinerGame.html
deprecated/web_template/templates/: base.html  home.html
docs/: conf.py
games/: Combiner.py  CombinerGame.html
src/word_games/: games.py
src/word_games/templates/: combiner_template.html
test_website/: app.py
utils/: md2html.py
web_template/: app.py
web_template/games/: Combiner.py  Games.py
web_template/templates/: base.html
