[command]
option = value

[metadata]
name = word_games
version = 1.0
author = HSE Linguistic Convergence Laboratory
description = Framework for creating linguistic games with user provided data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LingConLab/word_games
project_urls =
    Homepage = https://github.com/LingConLab/word_games
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    jinja2
include_package_data = True

[options.packages.find]
where = src